rsvp banner, fixed video container on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -22,7 +22,7 @@
       flex-flow: column;
       padding-bottom: 15px;
       margin: 0 auto;
-      width: 350px;
+      
       text-align: center
     }
 
@@ -52,7 +52,7 @@
       align-items: center;
       justify-content: center;
       text-align: center;
-      width: 600px;
+      max-width: 600px;
       min-height: 300px;
       margin: 0 auto;
       box-shadow: 0 10px 50px 0 #ccc;
